--- a/special-pages/pages/settings/public/locales/en/settings.json
+++ b/special-pages/pages/settings/public/locales/en/settings.json
@@ -18,8 +18,8 @@
     "note": "The placeholder text in a search input field."
   },
   "screen_title_defaultBrowser": {
-    "title": "Private Search",
-    "note": "Private Search"
+    "title": "Default Browser",
+    "note": "Default Browser"
   },
   "screen_title_privateSearch": {
     "title": "Private Search",
