--- a/special-pages/pages/settings/public/locales/en/settings.json
+++ b/special-pages/pages/settings/public/locales/en/settings.json
@@ -44,5 +44,61 @@
   "no_results_text": {
     "title": "Try searching for a different keyword.",
     "note": "Placeholder text when a search gave no results."
+  },
+  "status_on": {
+    "title": "On",
+    "note": "Option indicating that the default browser setting is turned on"
+  },
+  "status_on_private": {
+    "title": "Always On",
+    "note": "Option indicating that a setting is 'always on' meaning the use cannot configure it"
+  },
+  "status_off": {
+    "title": "Off",
+    "note": "Option indicating that the default browser setting is turned off"
+  },
+  "privateSearch.screenTitle": {
+    "title": "Private Search",
+    "note": "Heading for the private search settings section"
+  },
+  "privateSearch.ddg_private_search_info": {
+    "title": "DuckDuckGo Private Search is your default search engine, so you can search the web without being tracked.",
+    "note": "Informational text explaining the privacy benefit of using DuckDuckGo as the default search engine"
+  },
+  "privateSearch.learn_more_link": {
+    "title": "Learn More",
+    "note": "Link text for additional information about private search"
+  },
+  "privateSearch.autocomplete_opt": {
+    "title": "Autocomplete suggestions",
+    "note": "Checkbox option for enabling autocomplete suggestions in search"
+  },
+  "defaultBrowser.screenTitle": {
+    "title": "Default Browser",
+    "note": "Heading for the default browser settings section"
+  },
+  "defaultBrowser.off_opt": {
+    "title": "Off",
+    "note": "Option indicating that the default browser setting is turned off"
+  },
+  "defaultBrowser.ddg_not_default": {
+    "title": "DuckDuckGo is not your default browser.",
+    "note": "Notification message indicating that DuckDuckGo is not set as the default browser"
+  },
+  "defaultBrowser.make_ddg_default": {
+    "title": "Make DuckDuckGo Default...",
+    "note": "Button text to set DuckDuckGo as the default browser"
+  },
+  "defaultBrowser.shortcuts_head": {
+    "title": "Shortcuts",
+    "note": "Heading for the shortcuts settings section"
+  },
+  "defaultBrowser.ddg_not_in_dock": {
+    "title": "DuckDuckGo is not added to the Dock.",
+    "note": "Notification message indicating that DuckDuckGo is not added to the Dock"
+  },
+  "defaultBrowser.add_to_dock": {
+    "title": "Add to Dock...",
+    "note": "Button text to add DuckDuckGo to the Dock"
   }
 }
