--- a/special-pages/pages/settings/public/locales/en/settings.json
+++ b/special-pages/pages/settings/public/locales/en/settings.json
@@ -45,6 +45,10 @@
     "title": "Try searching for a different keyword.",
     "note": "Placeholder text when a search gave no results."
   },
+  "group_title_protections": {
+    "title": "Privacy Protections",
+    "note": ""
+  },
   "status_on": {
     "title": "On",
     "note": "Option indicating that the default browser setting is turned on"
@@ -56,6 +60,30 @@
   "status_off": {
     "title": "Off",
     "note": "Option indicating that the default browser setting is turned off"
+  },
+  "webTrackingProtection.screenTitle": {
+    "title": "Web Tracking Protection",
+    "note": "Heading for the web tracking protection settings section"
+  },
+  "webTrackingProtection.ddg_tracking_info": {
+    "title": "DuckDuckGo automatically blocks hidden trackers as you browse the web.",
+    "note": "Informational text explaining how DuckDuckGo protects against trackers"
+  },
+  "webTrackingProtection.learn_more_tracking": {
+    "title": "Learn More",
+    "note": "Link text for additional information about tracking protection"
+  },
+  "webTrackingProtection.gpc.global_privacy_opt": {
+    "title": "Enable Global Privacy Control",
+    "note": "Checkbox option for enabling the Global Privacy Control feature"
+  },
+  "webTrackingProtection.gpc.global_privacy_info": {
+    "title": "Tells participating websites not to sell or share your data.",
+    "note": "Explanation of what the Global Privacy Control feature does"
+  },
+  "webTrackingProtection.gpc.learn_more_gpc": {
+    "title": "Learn More",
+    "note": "Link text for additional information about Global Privacy Control"
   },
   "privateSearch.screenTitle": {
     "title": "Private Search",
