--- a/special-pages/pages/settings/public/locales/en/settings.json
+++ b/special-pages/pages/settings/public/locales/en/settings.json
@@ -93,6 +93,22 @@
     "title": "Autocomplete suggestions",
     "note": "Checkbox option for enabling autocomplete suggestions in search"
   },
+  "emailProtection.screenTitle": {
+    "title": "Email Protection",
+    "note": ""
+  },
+  "emailProtection.ddg_email_protection_info": {
+    "title": "Block email trackers and hide your address without switching your email provider.",
+    "note": ""
+  },
+  "emailProtection.learn_more_link": {
+    "title": "Learn More",
+    "note": ""
+  },
+  "emailProtection.enable_button": {
+    "title": "Enable Email Protection",
+    "note": ""
+  },
   "defaultBrowser.screenTitle": {
     "title": "Default Browser",
     "note": "Heading for the default browser settings section"
