--- a/special-pages/pages/settings/public/locales/en/settings.json
+++ b/special-pages/pages/settings/public/locales/en/settings.json
@@ -77,6 +77,30 @@
     "title": "Learn More",
     "note": "Link text for additional information about Global Privacy Control"
   },
+  "vpn.screenTitle": {
+    "title": "VPN",
+    "note": ""
+  },
+  "vpn.enable_button": {
+    "title": "Open VPN...",
+    "note": ""
+  },
+  "vpn.location.section_title": {
+    "title": "Location",
+    "note": ""
+  },
+  "vpn.location.nearest.title": {
+    "title": "Nearest Location",
+    "note": ""
+  },
+  "vpn.location.nearest.text": {
+    "title": "Automatically connect to the nearest server we can find",
+    "note": ""
+  },
+  "vpn.location.button_label": {
+    "title": "Change...",
+    "note": ""
+  },
   "privateSearch.screenTitle": {
     "title": "Private Search",
     "note": "Heading for the private search settings section"
