update more icons

--- a/special-pages/pages/onboarding/public/locales/en/onboarding.json
+++ b/special-pages/pages/onboarding/public/locales/en/onboarding.json
@@ -386,7 +386,7 @@
     "note": "The description of a browser privacy feature in the comparison table."
   },
   "comparison_blockAds": {
-    "title": "Blocks targeted ads",
+    "title": "Block targeted ads",
     "note": "The description of a browser privacy feature in the comparison table."
   },
   "comparison_eraseData": {
