--- a/special-pages/pages/duckplayer/public/locales/en/duckplayer.json
+++ b/special-pages/pages/duckplayer/public/locales/en/duckplayer.json
@@ -74,7 +74,7 @@
     "note": "Message shown when YouTube has blocked playback of a video"
   },
   "signInRequiredErrorMessage1": {
-    "title": "This sometimes happens when you’re using a VPN. If that’s the case, try turning it off and reloading this page.",
+    "title": "This sometimes happens when you’re using a VPN. If that’s the case, try changing locations or turning it off and reloading this page.",
     "note": "Explanation on why the error is happening and a suggestions on how to solve it."
   },
   "signInRequiredErrorMessage2": {
