--- a/special-pages/pages/duckplayer/public/locales/en/duckplayer.json
+++ b/special-pages/pages/duckplayer/public/locales/en/duckplayer.json
@@ -33,63 +33,83 @@
     "title": "<b>ERROR:</b> Invalid video id",
     "note": "Shown when the page URL doesn't match a known video ID. Note for translators: The <b> tag makes the word 'ERROR:' bold. Depending on the grammar of the target language, you might need to move it so that the correct word is emphasized."
   },
-  "unknownErrorHeading": {
+  "unknownErrorHeading1": {
     "title": "Duck Player can’t load this video",
     "note": "Message shown when YouTube has blocked playback of a video"
   },
-  "unknownErrorMessage1": {
+  "unknownErrorMessage1a": {
     "title": "This video can’t be viewed outside of YouTube.",
     "note": "Explanation on why the error is happening."
   },
-  "unknownErrorMessage2": {
+  "unknownErrorMessage1b": {
     "title": "You can still watch this video on YouTube, but without the added privacy of Duck Player.",
     "note": "A message explaining that the blocked video can be watched directly on YouTube."
   },
-  "ageRestrictedErrorHeading": {
+  "ageRestrictedErrorHeading1": {
     "title": "Sorry, this video is age-restricted",
     "note": "Message shown when YouTube has blocked playback of a video"
   },
-  "ageRestrictedErrorMessage1": {
+  "ageRestrictedErrorMessage1a": {
     "title": "To watch age-restricted videos, you need to sign in to YouTube to verify your age.",
     "note": "Explanation on why the error is happening."
   },
-  "ageRestrictedErrorMessage2": {
+  "ageRestrictedErrorMessage1b": {
     "title": "You can still watch this video, but you’ll have to sign in and watch it on YouTube without the added privacy of Duck Player.",
     "note": "A message explaining that the blocked video can be watched directly on YouTube."
   },
-  "noEmbedErrorHeading": {
+  "noEmbedErrorHeading1": {
     "title": "Sorry, this video can only be played on YouTube",
     "note": "Message shown when YouTube has blocked playback of a video"
   },
-  "noEmbedErrorMessage1": {
+  "noEmbedErrorMessage1a": {
     "title": "The creator of this video has chosen not to allow it to be viewed outside of YouTube.",
     "note": "Explanation on why the error is happening."
   },
-  "noEmbedErrorMessage2": {
+  "noEmbedErrorMessage1b": {
     "title": "You can still watch it on YouTube, but without the added privacy of Duck Player.",
     "note": "A message explaining that the blocked video can be watched directly on YouTube."
   },
-  "signInRequiredErrorHeading": {
+  "blockedVideoErrorHeading1": {
+    "title": "YouTube won’t let Duck Player load this video",
+    "note": "Message shown when YouTube has blocked playback of a video"
+  },
+  "blockedVideoErrorMessage1a": {
+    "title": "YouTube doesn’t allow this video to be viewed outside of YouTube.",
+    "note": "Explanation on why the error is happening."
+  },
+  "blockedVideoErrorMessage1b": {
+    "title": "You can still watch this video on YouTube, but without the added privacy of Duck Player.",
+    "note": "A message explaining that the blocked video can be watched directly on YouTube."
+  },
+  "signInRequiredErrorHeading2": {
     "title": "Sorry, YouTube thinks you’re a bot!",
     "note": "Message shown when YouTube has blocked playback of a video"
   },
-  "signInRequiredErrorHeadingAlternative": {
+  "signInRequiredErrorHeading3": {
     "title": "YouTube thinks you’re a bot!",
     "note": "Message shown when YouTube has blocked playback of a video"
   },
-  "signInRequiredErrorMessage1": {
+  "signInRequiredErrorMessage1a": {
     "title": "This can happen if you're using a VPN. Try turning the VPN off or switching server locations and reloading this page.",
     "note": "Explanation on why the error is happening and a suggestions on how to solve it."
   },
-  "signInRequiredErrorMessage2": {
+  "signInRequiredErrorMessage1b": {
     "title": "If that doesn't work, you can still watch it on YouTube, but without the added privacy of DuckPlayer.",
     "note": "More troubleshooting tips for this specific error"
   },
-  "signInRequiredErrorMessage3": {
+  "signInRequiredErrorMessage2a": {
+    "title": "This can happen if you're using a VPN. Try turning the VPN off or switching server locations and reloading this page.",
+    "note": "Explanation on why the error is happening and a suggestions on how to solve it."
+  },
+  "signInRequiredErrorMessage2b": {
+    "title": "If that doesn't work, you can still watch it on YouTube, but without the added privacy of DuckPlayer.",
+    "note": "More troubleshooting tips for this specific error"
+  },
+  "signInRequiredErrorMessage3a": {
     "title": "This may be caused by using a VPN. Try turning it off or switching servers.",
     "note": "Explanation on why the error is happening and a suggestions on how to solve it."
   },
-  "signInRequiredErrorMessage4": {
+  "signInRequiredErrorMessage3b": {
     "title": "You can still watch the video directly on YouTube, but without the added privacy of DuckPlayer",
     "note": "Explanation on why the error is happening and a suggestions on how to solve it."
   },
