--- a/special-pages/pages/duckplayer/public/locales/en/duckplayer.json
+++ b/special-pages/pages/duckplayer/public/locales/en/duckplayer.json
@@ -102,7 +102,7 @@
     "note": "Explanation on why the error is happening and a suggestions on how to solve it."
   },
   "signInRequiredErrorMessage2b": {
-    "title": "If that doesn’t work, you’ll have to sign in and watch it on YouTube without the added privacy of Duck Player.",
+    "title": "If that doesn’t work, you’ll have to sign in and watch this video on YouTube without the added privacy of Duck Player.",
     "note": "More troubleshooting tips for this specific error"
   },
   "signInRequiredErrorMessage3a": {
