--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -125,21 +125,21 @@
     "title": "{count} attempts from other networks",
     "note": "An aggregated count of blocked entries not present in the main list. For example, '200 attempts from other networks'"
   },
-  "omnibox_menuTitle": {
+  "omnibar_menuTitle": {
     "title": "Search & Duck.ai",
-    "description": "The title of the omnibox widget as it appears in the customizer panel."
+    "description": "The title of the omnibar widget as it appears in the customizer panel."
   },
-  "omnibox_logoAlt": {
+  "omnibar_logoAlt": {
     "title": "DuckDuckGo",
-    "description": "The alt text for the DuckDuckGo logo in the omnibox."
+    "description": "The alt text for the DuckDuckGo logo in the omnibar."
   },
-  "omnibox_searchTab": {
+  "omnibar_searchTab": {
     "title": "Search",
-    "description": "The title of the tab in the omnibox that allows users to search the web."
+    "description": "The title of the tab in the omnibar that allows users to search the web."
   },
-  "omnibox_aiTab": {
+  "omnibar_aiTab": {
     "title": "Duck.ai",
-    "description": "The title of the tab in the omnibox that allows users to create a Duck.ai chat."
+    "description": "The title of the tab in the omnibar that allows users to create a Duck.ai chat."
   },
   "nextSteps_sectionTitle": {
     "title": "Next Steps",
