Add Duck.ai toggle to Customizer

--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -157,6 +157,14 @@
     "title": "Search or enter address",
     "description": "Placeholder text for the search input field."
   },
+  "omnibar_hideDuckAi": {
+    "title": "Hide Duck.ai",
+    "description": "Label for the button to hide the Duck.ai chat interface."
+  },
+  "omnibar_showDuckAi": {
+    "title": "Show Duck.ai",
+    "description": "Label for the button to show the Duck.ai chat interface."
+  },
   "nextSteps_sectionTitle": {
     "title": "Next Steps",
     "note": "Text that goes in the Next Steps bubble above the first card"
