NTP: Swap “Show Duck.ai” / “Hide Duck.ai” link for a Duck.ai toggle (#1870)
* Add Duck.ai toggle to visibility menu

* Refactor Customizer Menu and Visibility Icon Rendering

* Adjust Duck.ai toggle icon colour

* Remove Duck.ai show/hide strings from localization files

* Remove unused settingsLinks code from CustomizerProvider

* Update Toggle Duck.ai integration tests

* Add Duck.ai toggle translation for multiple locales

--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -157,13 +157,9 @@
     "title": "Search privately",
     "description": "Placeholder text for the search input field."
   },
-  "omnibar_hideDuckAi": {
-    "title": "Hide Duck.ai",
-    "description": "Label for the button to hide the Duck.ai chat interface."
-  },
-  "omnibar_showDuckAi": {
-    "title": "Show Duck.ai",
-    "description": "Label for the button to show the Duck.ai chat interface."
+  "omnibar_toggleDuckAi": {
+    "title": "Duck.ai",
+    "description": "Label for the button to toggle the Duck.ai chat interface."
   },
   "omnibar_searchDuckDuckGoSuffix": {
     "title": "Search DuckDuckGo",
