--- a/special-pages/pages/new-tab/public/locales/es/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/es/new-tab.json
@@ -156,13 +156,9 @@
     "title" : "Busca de manera privada",
     "description" : "Placeholder text for the search input field."
   },
-  "omnibar_hideDuckAi" : {
-    "title" : "Ocultar Duck.ai",
-    "description" : "Label for the button to hide the Duck.ai chat interface."
-  },
-  "omnibar_showDuckAi" : {
-    "title" : "Mostrar Duck.ai",
-    "description" : "Label for the button to show the Duck.ai chat interface."
+  "omnibar_toggleDuckAi" : {
+    "title" : "Duck.ai",
+    "description" : "Label for the button to toggle the Duck.ai chat interface."
   },
   "omnibar_searchDuckDuckGoSuffix" : {
     "title" : "Buscar en DuckDuckGo",
