--- a/special-pages/pages/new-tab/public/locales/it/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/it/new-tab.json
@@ -156,6 +156,10 @@
     "title" : "Cerca privatamente",
     "description" : "Placeholder text for the search input field."
   },
+  "omnibar_searchFormCloseButtonLabel" : {
+    "title" : "Chiudi",
+    "description" : "Accessible label for the close button in the search form."
+  },
   "omnibar_toggleDuckAi" : {
     "title" : "Duck.ai",
     "description" : "Label for the button to toggle the Duck.ai chat interface."
