--- a/special-pages/pages/release-notes/public/locales/en/release-notes.json
+++ b/special-pages/pages/release-notes/public/locales/en/release-notes.json
@@ -68,8 +68,8 @@
         "title": "Retry Update",
         "note": "Label for a button that retries applying the failed update"
     },
-    "forDuckDuckGoSubscribers": {
-        "title": "For DuckDuckGo subscribers",
+    "forSubscribers": {
+        "title": "For DuckDuckGo Subscribers",
         "note": "Heading label for release notes specific to DuckDuckGo Subscribers"
     },
     "new": {
