--- a/special-pages/pages/release-notes/public/locales/it/release-notes.json
+++ b/special-pages/pages/release-notes/public/locales/it/release-notes.json
@@ -68,7 +68,7 @@
     "title" : "Riprova l'aggiornamento",
     "note" : "Label for a button that retries applying the failed update"
   },
-  "forDuckDuckGoSubscribers" : {
+  "forSubscribers" : {
     "title" : "Per gli abbonati a Privacy Pro",
     "note" : "Heading label for release notes specific to Privacy Pro Subscribers (do not translate Privacy Pro)"
   },
